--- a/Backend/Degrees/pom.xml
+++ b/Backend/Degrees/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.springrest</groupId>
-  <artifactId>Degrees</artifactId>
+  <artifactId>Degree</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <name>Degrees</name>
